--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -1,134 +1,33 @@
-{% extends "template.html" %}
+{% extends "index.html" %}
 
-{% block bodyClass %}
-class="hold-transition skin-blue fixed sidebar-mini"
+{% block css %}
+<link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
+<link rel="stylesheet" href="{{ static_url('css/init.css') }}">
+<link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
 {% end %}
 
-{% block pages %}
-<div class="wrapper">
+{% block title %}
+{{ escape(handler.settings["title"]) }} | Dasboard
+{% end %}
 
-    <header class="main-header">
-        <!-- Logo -->
-        <a href="#" class="logo">
-            <!-- mini logo for sidebar mini 50x50 pixels -->
-            <span class="logo-mini"><i class="fa fa-free-code-camp"></i></span>
-            <!-- logo for regular state and mobile devices -->
-            <span class="logo-lg"><i class="fa fa-free-code-camp"></i>
-                <b>{{ escape(handler.settings["title"]) }}</b></span>
-        </a>
-        <!-- /.Logo -->
+{% block js %}
+<script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
+<script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+<script src="{{ static_url('js/init.js') }}"></script>
+{% end %}
 
-        <!-- Header Navbar: style can be found in header.less -->
-        <nav class="navbar navbar-static-top">
-            <!-- Sidebar toggle button-->
-            <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
+{% block content %}
+<section class="content-header">
+    <h1>
+        Dasboard
+        <small>Testing</small>
+    </h1>
+    <ol class="breadcrumb">
+        <li class="active"><i class="fa fa-home"></i> Home</li>
+    </ol>
+</section>
+<section class="content">
 
-            <div class="navbar-custom-menu">
-                <ul class="nav navbar-nav">
-                    <!-- User Account: style can be found in dropdown.less -->
-                    <li class="dropdown user user-menu">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="{{ static_url(userprofile['photo']) }}" class="user-image" alt="User Image">
-                            <span class="hidden-xs">{{ userprofile['nama'] }}</span>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <li class="user-header">
-                                <img src="{{ static_url(userprofile['photo']) }}" class="img-circle" alt="User Image">
-                                <p>
-                                    <i class="fa fa-user"></i> {{ userprofile['nama'] }} <br>
-                                    <i class="fa fa-mobile "></i> {{ userprofile['nomorhp'] }} <br>
-                                    last update, {{ userprofile['lastupdate'] }}
-                                </p>
-                            </li>
-                            <!-- Menu Footer-->
-                            <li class="user-footer">
-                                <div class="pull-left">
-                                    <a href="#" class="btn btn-default btn-flat">Profile</a>
-                                </div>
-                                <div class="pull-right">
-                                    <a href="/logout" class="btn btn-default btn-flat">Sign out</a>
-                                </div>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <!-- /.Navbar -->
-    </header>
-    <!-- =============================================== -->
-
-    <!-- Left side column. contains the sidebar -->
-    <aside class="main-sidebar">
-        <!-- sidebar: style can be found in sidebar.less -->
-        <section class="sidebar">
-            <!-- Sidebar user panel -->
-            <div class="user-panel">
-                <div class="pull-left image">
-                    <img src="{{ static_url(userprofile['photo']) }}" class="img-circle" alt="User Image">
-                </div>
-                <div class="pull-left info">
-                    <p>{{ userprofile['pegawaiid'] }}</p>
-                    <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
-                </div>
-            </div>
-
-            <!-- sidebar menu: : style can be found in sidebar.less -->
-            <ul class="sidebar-menu" data-widget="tree">
-                <li class="header" style="font-weight: bold; color: aliceblue;">MAIN NAVIGATION</li>
-                <!-- Dashboard -->
-                <li class="">
-                    <a href="/">
-                        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-                    </a>
-                </li>
-                <!-- ./Register Berkas -->
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-server" aria-hidden="true"></i>
-                        <span>Register Berkas</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Inbox</a></li>
-                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Sent</a></li>
-                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Draft</a></li>
-                    </ul>
-                </li>
-                <!-- ./ADMINISTRATOR -->
-                <li class="treeview">
-                    <a href="#">
-                        <i class="fa fa-cog"></i>
-                        <span>Administrator</span>
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
-                    </a>
-                    <ul class="treeview-menu">
-                        <li class=""><a href="/administrator/daftarpegawai"><i class="fa fa-circle-o"></i> Daftar Pegawai</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-        <!-- /.sidebar -->
-    </aside>
-
-    <!-- =============================================== -->
-
-    <!-- Content Wrapper. Contains page content -->
-    <div class="content-wrapper">
-        {% block content %}
-
-        {% end %}
-    </div>
-    <!-- /.content-wrapper -->
-</div>
+</section>
 {% end %}
