--- a/view/dashboard.html
+++ b/view/dashboard.html
@@ -20,13 +20,14 @@
 {% block content %}
 <section class="content-header">
     <h1>
-        Dasboard
-        <small>Testing</small>
+        {{ page['title'] }}
+        <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
         <li class="active"><i class="fa fa-home"></i> Home</li>
     </ol>
 </section>
+
 <section class="content">
 
 </section>
