--- a/view/error/404.html
+++ b/view/error/404.html
@@ -1,15 +1,15 @@
-{% extends "../../index.html" %}
+{% extends "../index.html" %}
 
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
-<link rel="stylesheet" href="{{ static_url('css/base.css') }}">
+<link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
 {% end %}
 
 
 {% block title %}
-{{ escape(handler.settings["title"]) }} | Error 404
+{{ escape(handler.settings["title"]) }} | {{ page['title'] }}
 {% end %}
 
 {% block js %}
@@ -17,14 +17,14 @@
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
-<script src="{{ static_url('js/base.js') }}"></script>
+<script src="{{ static_url('js/init.js') }}"></script>
 {% end %}
 
 {% block content %}
 <section class="content-header">
     <h1>
-        404 Error
-        <small>Page not found</small>
+        {{ page['title'] }}
+        <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-exclamation-triangle"></i> Error</a></li>
@@ -43,16 +43,7 @@
                 We could not find the page you were looking for.
                 Meanwhile, you may <a href="/"> <strong>return to dashboard</strong></a> or try using the search form.
             </p>
-            <!-- <form class="search-form">
-            <div class="input-group">
-                <input type="text" name="search" class="form-control" placeholder="Search">
-        
-                <div class="input-group-btn">
-                    <button type="submit" name="submit" class="btn btn-warning btn-flat"><i class="fa fa-search"></i>
-                    </button>
-                </div>
-            </div>
-        </form> -->
+            
         </div>
         <!-- /.error-content -->
     </div>
