--- a/view/index.html
+++ b/view/index.html
@@ -81,11 +81,28 @@ class="hold-transition skin-blue fixed sidebar-mini"
             <!-- sidebar menu: : style can be found in sidebar.less -->
             <ul class="sidebar-menu" data-widget="tree">
                 <li class="header" style="font-weight: bold; color: aliceblue;">MAIN NAVIGATION</li>
-                <!-- Dashboard -->
+
+                <!-- ./Dashboard -->
                 <li class="">
                     <a href="/">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
+                </li>
+
+                <!-- ./Register Berkas -->
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-server" aria-hidden="true"></i>
+                        <span>Register Berkas</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Inbox</a></li>
+                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Sent</a></li>
+                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Draft</a></li>
+                    </ul>
                 </li>
             </ul>
         </section>
