--- a/view/index.html
+++ b/view/index.html
@@ -99,9 +99,24 @@ class="hold-transition skin-blue fixed sidebar-mini"
                         </span>
                     </a>
                     <ul class="treeview-menu">
+                        <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i> Compose</a></li>
                         <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Inbox</a></li>
-                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Sent</a></li>
-                        <li class=""><a href="/register/inbox"><i class="fa fa-circle-o"></i> Draft</a></li>
+                        <li class=""><a href="/register/sent"><i class="fa fa-circle-o"></i> Sent</a></li>
+                        <li class=""><a href="/register/draft"><i class="fa fa-circle-o"></i> Draft</a></li>
+                    </ul>
+                </li>
+
+                <!-- ./Administrator -->
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-users" aria-hidden="true"></i>
+                        <span>Administrator</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="/administrator/daftarpegawai"><i class="fa fa-circle-o"></i> Daftar Pegawai</a></li>
                     </ul>
                 </li>
             </ul>
