--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -3,6 +3,14 @@
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/datatables.net-bs/css/dataTables.bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.dataTables.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/FixedHeader-3.1.7/css/fixedHeader.bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
 {% end %}
@@ -14,6 +22,16 @@
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
+<script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
+<script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
+<script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
+<script src="{{ static_url('vendor/datatables.net/js/jquery.dataTables.js') }}"></script>
+<script src="{{ static_url('vendor/datatables.net-bs/js/dataTables.bootstrap.js') }}"></script>
+<script src="{{ static_url('vendor/Responsive-2.2.2/js/dataTables.responsive.js') }} }}"></script>
+<script src="{{ static_url('vendor/Responsive-2.2.2/js/responsive.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/FixedHeader-3.1.7/js/dataTables.fixedHeader.js') }} }}"></script>
+<script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 {% end %}
 
@@ -29,6 +47,76 @@
 </section>
 
 <section class="content">
+<!-- Table Pegawai -->
+<div class="nav-tabs-custom">
+    <!-- Tabs within a box -->
+    <ul class="nav nav-tabs pull-right">
+        <li><a href="#detail" data-toggle="tab">Detail Pegawai</a></li>
+        <li class="active"><a href="#table" data-toggle="tab">Pencarian Pegawai</a></li>
+    </ul>
+    <div class="tab-content no-padding">
+        <div class="chart tab-pane active" id="table">
 
+            <div class="box box-solid">
+                <!-- formFilter -->
+                <form id="formFilter" class="form-horizontal" method="POST">
+                    {% module xsrf_form_html() %}
+                    <div class="box-body">
+                        <div class="form-group form-group-md">
+                            <label class="control-label col-md-4 col-sm-4 col-xs-12" for="nip">Pegawai ID:</label>
+                            <div class="col-md-4 col-sm-4 col-xs-12">
+                                <input type="text" class="form-control" name="nip" id="nip">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
+                                <button type="submit" id="cari" class="btn btn-primary btn-flat"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.box-body -->
+                </form>
+                <!-- /.formFilter -->
+
+                <!-- box-footer -->
+                <div class="box-footer">
+                    <input type="hidden" name="rowid">
+                    <div class="text-right">
+                        <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
+                    </div>
+                    <table id="tablePegawai" class="table table-striped table-bordered dt-responsive nowrap"
+                        style="width:100%">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th></th>
+                                <th>NIP</th>
+                                <th>Username</th>
+                                <th>Nama</th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody style="cursor: pointer;">
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.box-footer -->
+
+            </div>
+        </div>
+
+        <!-- Detail -->
+        <div class="chart tab-pane" id="detail">
+            <div class="error-content">
+                <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+
+                <p class="text-center">
+                    We could not find the page you were looking for.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </section>
 {% end %}
