--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -19,6 +19,8 @@
 {{ escape(handler.settings["title"]) }} | {{ page['title'] }}
 {% end %}
 
+
+<!-- ANCHOR: Module CSS daftarpegawai.html -->
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
@@ -33,6 +35,7 @@
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
+<script src="{{ static_url('js/administrator/daftarpegawai.js')}}"></script>
 {% end %}
 
 {% block content %}
@@ -90,10 +93,9 @@
                             <tr>
                                 <th>ID</th>
                                 <th></th>
-                                <th>NIP</th>
+                                <th>Pegawai ID</th>
                                 <th>Username</th>
                                 <th>Nama</th>
-                                <th></th>
                                 <th></th>
                             </tr>
                         </thead>
@@ -119,4 +121,51 @@
     </div>
 </div>
 </section>
+
+<!-- modal-add -->
+<div class="modal fade" id="modal-add" data-backdrop="false">
+    <form id="formAddPegawai" class="form-horizontal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username :</label>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <input type="text" class="form-control" id="username" name="username">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-3 col-sm-3 col-xs-12 col-sm-offset-3">
+                            <button id="caripegawai" type="submit" class="btn btn-warning btn-flat"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer" style="display: none;">
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
+                            for="description_log">Description:</label>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <textarea name="description_log" id="description_log" class="form-control" cols="20" rows="3" style="font-weight: bold;" readonly>
+                            </textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
+                            <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" data-dismiss="modal" aria-label="Close" style="display:none"><i class="fa fa-ban"></i> Batal</button>
+                            <button id="registerpegawai" type="button" class="btn btn-danger btn-flat" style="display:none"><i class="fa fa-save"></i> Pegawai</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
+<!-- /.modal-add -->
 {% end %}
+
+
