--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -55,7 +55,7 @@
     <!-- Tabs within a box -->
     <ul class="nav nav-tabs pull-right">
         <li><a href="#detail" data-toggle="tab">Detail Pegawai</a></li>
-        <li class="active"><a href="#table" data-toggle="tab">Pencarian Pegawai</a></li>
+        <li class="active"><a href="#table" data-toggle="tab">Table Pegawai</a></li>
     </ul>
     <div class="tab-content no-padding">
         <div class="chart tab-pane active" id="table">
