--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -36,6 +36,15 @@
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/administrator/daftarpegawai.js')}}"></script>
+<style>
+    .error {
+        color: #dd4b39 !important;
+    }
+
+    th.dt-center {
+        text-align: center;
+    }
+</style>
 {% end %}
 
 {% block content %}
@@ -45,7 +54,8 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li class="active"><i class="fa fa-home"></i> Home</li>
+        <li><i class="fa fa-cog"></i> Administrator</li>
+        <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
 
@@ -73,7 +83,8 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
-                                <button type="submit" id="cari" class="btn btn-primary btn-flat"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                                <button type="submit" id="cari" class="btn btn-flat btn-primary"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                                <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
@@ -83,10 +94,8 @@
 
                 <!-- box-footer -->
                 <div class="box-footer">
+                    <input type="hidden" name="officeid" value="{{ useractived['officeid'] }}">
                     <input type="hidden" name="rowid">
-                    <div class="text-right">
-                        <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
-                    </div>
                     <table id="tablePegawai" class="table table-striped table-bordered dt-responsive nowrap"
                         style="width:100%">
                         <thead>
@@ -145,10 +154,27 @@
                         </div>
                     </div>
                 </div>
-                <div class="modal-footer" style="display: none;">
+                <div class="modal-footer">
                     <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12"
-                            for="description_log">Description:</label>
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_log">Pegawai ID :</label>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <input type="text" class="form-control" name="pegawaiid_log" id="pegawaiid_log" value="" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_log">Username :</label>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <input type="text" class="form-control" name="username_log" id="username_log" value="" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_log">Nama :</label>
+                        <div class="col-md-7 col-sm-7 col-xs-12">
+                            <input type="text" class="form-control" name="name_log" id="name_log" value="" readonly>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="description_log">Description :</label>
                         <div class="col-md-7 col-sm-7 col-xs-12">
                             <textarea name="description_log" id="description_log" class="form-control" cols="20" rows="3" style="font-weight: bold;" readonly>
                             </textarea>
@@ -156,8 +182,8 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
-                            <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" data-dismiss="modal" aria-label="Close" style="display:none"><i class="fa fa-ban"></i> Batal</button>
-                            <button id="registerpegawai" type="button" class="btn btn-danger btn-flat" style="display:none"><i class="fa fa-save"></i> Pegawai</button>
+                            <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" data-dismiss="modal" aria-label="Close"><i class="fa fa-ban"></i> Batal</button>
+                            <button id="registerpegawai" type="button" class="btn btn-danger btn-flat"><i class="fa fa-save"></i> Pegawai</button>
                         </div>
                     </div>
                 </div>
