--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -142,48 +142,55 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username :</label>
-                        <div class="col-md-7 col-sm-7 col-xs-12">
-                            <input type="text" class="form-control" id="username" name="username">
+                    <div class="alert alert-warning kkplog_alert" style="display: none;">
+                    </div>
+
+                    <!-- KKP LOG FINDER -->
+                    <div class="kkplog_finder">
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username :</label>
+                            <div class="col-md-7 col-sm-7 col-xs-12">
+                                <input type="text" class="form-control" id="username" name="username">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-md-3 col-sm-3 col-xs-12 col-sm-offset-3">
+                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"><i class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <div class="col-md-3 col-sm-3 col-xs-12 col-sm-offset-3">
-                            <button id="caripegawai" type="submit" class="btn btn-warning btn-flat"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+
+                    <!-- KKP LOG -->
+                    <div class="kkplog" style="display: none;">
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_kkplog">Pegawai ID :</label>
+                            <div class="col-md-7 col-sm-7 col-xs-12">
+                                <input type="text" class="form-control" name="pegawaiid_kkplog" id="pegawaiid_kkplog" value="" readonly>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_log">Pegawai ID :</label>
-                        <div class="col-md-7 col-sm-7 col-xs-12">
-                            <input type="text" class="form-control" name="pegawaiid_log" id="pegawaiid_log" value="" readonly>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_kkplog">Username :</label>
+                            <div class="col-md-7 col-sm-7 col-xs-12">
+                                <input type="text" class="form-control" name="username_kkplog" id="username_kkplog" value="" readonly>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_log">Username :</label>
-                        <div class="col-md-7 col-sm-7 col-xs-12">
-                            <input type="text" class="form-control" name="username_log" id="username_log" value="" readonly>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_kkplog">Nama :</label>
+                            <div class="col-md-7 col-sm-7 col-xs-12">
+                                <input type="text" class="form-control" name="name_kkplog" id="name_kkplog" value="" readonly>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_log">Nama :</label>
-                        <div class="col-md-7 col-sm-7 col-xs-12">
-                            <input type="text" class="form-control" name="name_log" id="name_log" value="" readonly>
+                        <div class="form-group">
+                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone_kkplog">Telp :</label>
+                            <div class="col-md-7 col-sm-7 col-xs-12">
+                                <input type="text" class="form-control" name="phone_kkplog" id="phone_kkplog" value="" readonly>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="description_log">Description :</label>
-                        <div class="col-md-7 col-sm-7 col-xs-12">
-                            <textarea name="description_log" id="description_log" class="form-control" cols="20" rows="3" style="font-weight: bold;" readonly>
-                            </textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
-                            <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" data-dismiss="modal" aria-label="Close"><i class="fa fa-ban"></i> Batal</button>
-                            <button id="registerpegawai" type="button" class="btn btn-danger btn-flat"><i class="fa fa-save"></i> Pegawai</button>
+                        <div class="form-group">
+                            <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
+                                <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat" ><i class="fa fa-ban"></i> Batal</button>
+                                <button id="registerpegawai" type="button" class="btn btn-danger btn-flat"><i class="fa fa-save"></i> Pegawai</button>
+                            </div>
                         </div>
                     </div>
                 </div>
