--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -132,7 +132,7 @@
 </section>
 
 <!-- modal-add -->
-<div class="modal fade" id="modal-add" data-backdrop="false">
+<div class="modal fade" data-remote="false" id="modal-add" data-backdrop="false">
     <form id="formAddPegawai" class="form-horizontal">
         <div class="modal-dialog">
             <div class="modal-content">
