--- a/view/administrator/daftarpegawai.html
+++ b/view/administrator/daftarpegawai.html
@@ -95,15 +95,13 @@
                     <!-- box-footer -->
                     <div class="box-footer">
                         <input type="hidden" name="officeid" value="{{ useractived['officeid'] }}">
-                        <input type="hidden" name="rowid">
                         <!-- Table Pegawai -->
-                        <table id="tablePegawai" class="table table-striped table-bordered dt-responsive nowrap" style="width:100%">
+                        <table id="tablePegawai" class="table table-striped table-bordered dt-responsive" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>ID</th>
                                     <th></th>
                                     <th>Pegawai ID</th>
-                                    <th>Username</th>
                                     <th>Nama</th>
                                     <th></th>
                                 </tr>
