--- a/view/administrator/detailpegawai.html
+++ b/view/administrator/detailpegawai.html
@@ -96,10 +96,10 @@
                         headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
                         success: (function (data) {
                             // NOTE: print data
-                            console.log(data)
+                            // console.log(data)
 
                             // NOTE: callback response ajax
-                            callback(data);
+                            // callback(data);
                         }),
                         error: (function (XMLHttpRequest, textStatus, errorThrown) {
                             alert("Error: " + errorThrown);
