--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -83,10 +83,8 @@
                             </div>
                             <div class="form-group">
                                 <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
-                                    <button type="submit" id="cari" class="btn btn-flat btn-primary"><i
-                                            class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
-                                    <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i
-                                            class="fa fa-user-plus" aria-hidden="true"></i></a>
+                                    <button type="submit" id="cari" class="btn btn-flat btn-primary"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
+                                    <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -158,8 +156,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-3 col-sm-3 col-xs-12 col-sm-offset-3">
-                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"><i
-                                        class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
+                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"><i class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
                             </div>
                         </div>
                     </div>
@@ -198,10 +195,8 @@
                         </div>
                         <div class="form-group">
                             <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
-                                <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat"><i
-                                        class="fa fa-ban"></i> Batal</button>
-                                <button id="registerpegawai" type="button" class="btn btn-success btn-flat"><i
-                                        class="fa fa-save"></i> Pegawai</button>
+                                <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat"><i class="fa fa-ban"></i> Batal</button>
+                                <button id="registerpegawai" type="button" class="btn btn-success btn-flat"><i class="fa fa-save"></i> Pegawai</button>
                             </div>
                         </div>
                     </div>
