--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -68,6 +68,7 @@
             <li class="active"><a href="#table" data-toggle="tab">Table Pegawai</a></li>
         </ul>
         <div class="tab-content no-padding">
+            
             <div class="chart tab-pane active" id="table">
                 <div class="box box-solid">
                     <!-- formFilter -->
@@ -94,14 +95,14 @@
                     <!-- box-footer -->
                     <div class="box-footer">
                         <!-- Table Pegawai -->
-                        <table id="tablePegawai" class="table table-striped table-bordered dt-responsive"
-                            style="width:100%">
+                        <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
                             <thead>
                                 <tr>
                                     <th>ID</th>
-                                    <th></th>
+                                    <th>No</th>
                                     <th>Pegawai ID</th>
                                     <th>Nama</th>
+                                    <th>Create Date</th>
                                     <th></th>
                                 </tr>
                             </thead>
