--- a/view/index.html
+++ b/view/index.html
@@ -41,8 +41,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                             <li class="user-header">
                                 <img src="{{ static_url('img/unknown.png') }}" class="img-circle" alt="User Image">
                                 <p>
-                                    <i class="fa fa-user"></i> {{ useractived['nama'] }} <br>
-                                    <i class="fa fa-mobile "></i> {{ useractived['phone'] }} <br>
+                                    <i class="fa fa-user"></i> {{ useractived['nama'] }}
                                 </p>
                             </li>
                             <!-- Menu Footer-->
@@ -117,6 +116,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="/administrator/daftarpegawai"><i class="fa fa-circle-o"></i> Daftar Pegawai</a></li>
+                        <li class=""><a href="/administrator/activationuser"><i class="fa fa-circle-o"></i> Activation User</a></li>
                     </ul>
                 </li>
             </ul>
