--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -76,7 +76,7 @@
                         {% module xsrf_form_html() %}
                         <div class="box-body">
                             <div class="form-group form-group-md">
-                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="pegawaiid_find">NIP/NIK:</label>
+                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="pegawaiid_find">PegawaiID:</label>
                                 <div class="col-md-4 col-sm-4 col-xs-12">
                                     <input type="text" class="form-control" name="pegawaiid_find" id="pegawaiid_find">
                                 </div>
@@ -180,12 +180,6 @@
                             <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_kkplog">Nama :</label>
                             <div class="col-md-7 col-sm-7 col-xs-12">
                                 <input type="text" class="form-control" name="name_kkplog" id="name_kkplog" value="" readonly>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone_kkplog">Telp :</label>
-                            <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="phone_kkplog" id="phone_kkplog" value="" readonly>
                             </div>
                         </div>
                         <div class="form-group">
