--- a/view/node/detailpegawai.html
+++ b/view/node/detailpegawai.html
@@ -4,7 +4,7 @@
             <input type="hidden" name="userid" value="{{ user['_id'] }}">
 
             <div class="form-group form-group-md">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">NIP/NIK:</label>
+                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">PegawaiID:</label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
                 </div>
@@ -15,21 +15,7 @@
                     <input type="text" class="form-control" name="name" id="name" value="{{ user['nama'] }}" readonly>
                 </div>
             </div>
-            <div class="form-group form-group-md">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="phone">Phone:</label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" class="form-control" name="phone" id="phone" value="{{ user['phone'] }}" readonly>
-                </div>
-            </div>
-            <div class="form-group form-group-md">
-                <label class="control-label col-md-3 col-sm-3 col-xs-12" for="email">Email:</label>
-                <div class="col-md-6 col-sm-6 col-xs-12">
-                    <input type="text" class="form-control" name="email" id="email" value="{{ user['email'] }}" readonly>
-                </div>
-            </div>
         </div>
-    </div>
-    <div class="box-footer">
         <form id="formAddRole" class="form-horizontal">
             <div class="form-group">
                 <label for="node" class="control-label col-md-3 col-sm-3 col-xs-12"> Role:</label>
@@ -49,21 +35,24 @@
                 </div>
             </div>
         </form>
-
+    
         <!-- TableRole -->
         <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
             <thead>
                 <tr>
-                    <th>No</th>
                     <th>Key</th>
+                    <th>No</th>
                     <th>Role</th>
+                    <th>Create Date</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody style="cursor: pointer;">
             </tbody>
         </table>
         <!-- ./TableRole -->
-
+    </div>
+    <div class="box-footer">
         <script>
             $("#role").select2({
                 placeholder: "Pilih role..",
@@ -117,29 +106,44 @@
                 'columns': [
                     {
                         "targets": [0],
+                        "visible": false,
+                        "data": 'key',
+                    },{
+                        "targets": [1],
                         "width": "5%",
+                        "className": "dt-center text-center",
                         "render": function (data, type, row, meta) {
                             return meta.row + meta.settings._iDisplayStart + 1;
                         }
-                    },
-                    {
-                        "targets": [1],
-                        "width": "20%",
-                        "data": 'key',
-                        "className": "dt-center"
-                    },
-                    {
+                    },{
                         "targets": [2],
                         "width": "70%",
                         "data": 'description',
-                        "className": "dt-center"
+                        "className": "dt-center text-center",
+                    },{
+                        "targets": [3],
+                        "width": "20%",
+                        "data": 'createdate',
+                        "className": "dt-center text-center",
+                        "render": function (data) {
+                            var date = new Date(data);
+                            var month = date.getMonth() + 1;
+                            return date.getDate() + "/" + (month.toString().length > 1 ? month : "0" + month) + "/" + date.getFullYear() + "  " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds();
+                        }
+                    },{ 
+                        "targets": [4],
+                        "width": "5%",
+                        "className": "dt-center text-center",
+                        "render": function () {
+                            return '<a id="info" class="btn btn-primary btn-flat"><i class="fa fa-info-circle" aria-hidden="true"></i></a>';
+                        }
                     }
                 ],
                 'responsive': true,
                 'paging': false,
+                'autoWidth': false,
                 'pagingType': 'simple_numbers',
                 'lengthChange': false,
-                'pageLength': 20,
                 'ordering': false,
                 'searching': false,
                 'info': true
