--- a/view/page/administrator/activationuser.html
+++ b/view/page/administrator/activationuser.html
@@ -4,7 +4,6 @@
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
@@ -14,15 +13,14 @@
 {{ escape(handler.settings["title"]) }} | {{ page['title'] }}
 {% end %}
 
-
 <!-- ANCHOR: Module JS daftarpegawai.html -->
 {% block js %}
 <script src="{{ static_url('vendor/jquery/dist/jquery.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
-<script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
-<script src="{{ static_url('js/page/administrator/daftarpegawai.js')}}"></script>
+<script src="{{ static_url('js/node/informasipegawai.js') }}"></script>
 <style>
     .error {
         color: #dd4b39 !important;
@@ -49,23 +47,26 @@
 <section class="content">
     <div class="box box-solid">
         <div class="box-body">
-            <form class="form-horizontal">
+            <form class="form-horizontal" id="formActivation" method="POST">
+                {% module xsrf_form_html() %}
+
                 <div class="form-group">
-                    <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username :</label>
-                    <div class="col-md-5 col-sm-5 col-xs-12">
-                        <div class="input-group input-group-sm">
-                            <input type="text" class="form-control">
+                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="username">Username :</label>
+                    <div class="col-md-4 col-sm-4 col-xs-12">
+                        <div class="input-group input-group-md">
+                            <input type="text" class="form-control" id="username" name="username">
                             <span class="input-group-btn">
-                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"><i class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
+                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"> <i class="fa fa-share-alt" aria-hidden="true"></i> </button>
                             </span>
                         </div>
                     </div>
                 </div>
+
             </form>
         </div>
     </div>
 
-    <div class="box box-solid" id="box-userkkp">
+    <div id="userkkp">
     </div>
 </section>
 {% end %}
