--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -75,18 +75,20 @@
                     <form id="formFilter" class="form-horizontal" method="POST">
                         {% module xsrf_form_html() %}
                         <div class="box-body">
-                            <div class="form-group form-group-md">
-                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="pegawaiid_find">PegawaiID:</label>
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <input type="text" class="form-control" name="pegawaiid_find" id="pegawaiid_find">
-                                </div>
-                            </div>
+
                             <div class="form-group">
-                                <div class="col-md-4 col-sm-4 col-xs-12 col-sm-offset-4">
-                                    <button type="submit" id="cari" class="btn btn-flat btn-primary"><i class="fa fa-binoculars" aria-hidden="true"></i> Cari</button>
-                                    <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-add"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
+                                <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">PegawaiID:</label>
+                                <div class="col-md-4 col-sm-4 col-xs-12">
+                                    <div class="input-group input-group-md">
+                                        <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
+                                        <span class="input-group-btn">
+                                            <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
+
+
                         </div>
                         <!-- /.box-body -->
                     </form>
@@ -94,6 +96,9 @@
 
                     <!-- box-footer -->
                     <div class="box-footer">
+                        <a class="btn btn-flat btn-info" id="btnRefresh"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+                        <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
+
                         <!-- Table Pegawai -->
                         <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
                             <thead>
@@ -103,6 +108,7 @@
                                     <th>Pegawai ID</th>
                                     <th>Nama</th>
                                     <th>Create Date</th>
+                                    <th></th>
                                     <th></th>
                                 </tr>
                             </thead>
@@ -130,70 +136,36 @@
     </div>
 </section>
 
-<!-- modal-add -->
-<div class="modal fade" data-remote="false" id="modal-add" data-backdrop="false">
-    <form id="formAddPegawai" class="form-horizontal">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                </div>
-                <div class="modal-body">
 
-                    <!-- KKP LOG ALERT -->
-                    <div class="alert alert-warning kkplog_alert" style="display: none;">
-                    </div>
+<div class="modal fade" data-remote="false" id="modal-activation" data-backdrop="false" id="activedModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" id="formActivation" method="POST">
+                    {% module xsrf_form_html() %}
 
-                    <!-- KKP LOG FINDER -->
-                    <div class="kkplog_finder">
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username">Username :</label>
-                            <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" id="username" name="username">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-3 col-sm-3 col-xs-12 col-sm-offset-3">
-                                <button id="caripegawai" type="submit" class="btn btn-info btn-flat"><i class="fa fa-share-alt" aria-hidden="true"></i> kkp.atrbpn.go.id</button>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="inputUsername">Username :</label>
+                        <div class="col-md-8 col-sm-8 col-xs-12">
+                            <div class="input-group input-group-md">
+                                <input type="text" class="form-control" id="inputUsername" name="inputUsername">
+                                <span class="input-group-btn">
+                                    <button id="btnFilterUsername" type="submit" class="btn btn-info btn-flat"> <i class="fa fa-share-alt" aria-hidden="true"></i> </button>
+                                </span>
                             </div>
                         </div>
                     </div>
-                    <!-- ./KKP LOG FINDER -->
-
-                    <!-- KKP LOG -->
-                    <div class="kkplog" style="display: none;">
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid_kkplog">Pegawai ID :</label>
-                            <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="pegawaiid_kkplog" id="pegawaiid_kkplog" value="" readonly>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="username_kkplog">Username :</label>
-                            <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="username_kkplog" id="username_kkplog" value="" readonly>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name_kkplog">Nama :</label>
-                            <div class="col-md-7 col-sm-7 col-xs-12">
-                                <input type="text" class="form-control" name="name_kkplog" id="name_kkplog" value="" readonly>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-md-4 col-sm-4 col-sm-12 col-sm-offset-6">
-                                <button id="batalregisterpegawai" type="button" class="btn btn-default btn-flat"><i class="fa fa-ban"></i> Batal</button>
-                                <button id="registerpegawai" type="button" class="btn btn-success btn-flat"><i class="fa fa-save"></i> Pegawai</button>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- ./KKP LOG -->
-                </div>
+                
+                </form>
+            </div>
+            <div class="modal-footer" id="userView">
             </div>
         </div>
-    </form>
+    </div>
 </div>
-<!-- /.modal-add -->
 {% end %}
