--- a/view/node/detailrole.html
+++ b/view/node/detailrole.html
@@ -1,15 +1,18 @@
-<div class="box box-solid">
-    <div class="box-header">
-
+<div class="modal-content">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+        </button>
     </div>
-    <div class="box-body">
+    <div class="modal-body">
         <div id="formPegawai" class="form-horizontal">
             <input type="hidden" name="userid" value="{{ user['_id'] }}">
-
+        
             <div class="form-group form-group-md">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">PegawaiID:</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
+                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}"
+                        readonly>
                 </div>
             </div>
             <div class="form-group form-group-md">
@@ -20,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div class="box-footer">
+    <div class="modal-footer">
         <form id="formAddRole" class="form-horizontal">
             <div class="form-group">
                 <label for="node" class="control-label col-md-3 col-sm-3 col-xs-12"> Role:</label>
@@ -40,7 +43,7 @@
                 </div>
             </div>
         </form>
-        
+
         <!-- TableRole -->
         <table id="tableRole" class="table table-striped table-bordered dt-responsive" style="width:100%">
             <thead>
@@ -56,130 +59,5 @@
             </tbody>
         </table>
         <!-- ./TableRole -->
-
-        <script>
-            $("#role").select2({
-                placeholder: "Pilih role..",
-                theme: "bootstrap"
-            });
-            
-            /* Initial Add Role */
-            $('#formAddRole').validate({
-                submitHandler: function (form) {
-                    $.ajax({
-                        type: 'POST',
-                        url: '/administrator/daftarpegawai/role',
-                        data: JSON.stringify({
-                            userid: $('input[name=userid]').val(),
-                            key: $('#role').val()
-                        }),
-                        headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
-                        success: (function (data) {
-                            if (data.status){
-                                $('#tableRole').DataTable().ajax.reload();
-                            }
-                        }),
-                        error: (function (XMLHttpRequest, textStatus, errorThrown) {
-                            alert("Error: " + errorThrown);
-                        })
-                    });
-                }
-            });
-
-            // Role Pegawai
-            $('#tableRole tbody').on('click', '#btnDeleteRole', function () {
-                var selected_row = $(this).parents('tr');
-                if (selected_row.hasClass('child')) {
-                    selected_row = selected_row.prev();
-                }
-
-                if (tableRole.row(selected_row).data()[0] != "") {
-                    $.ajax({
-                        type: 'DELETE',
-                        url: '/administrator/daftarpegawai/role',
-                        data: JSON.stringify({
-                            userid: $('input[name=userid]').val(),
-                            key: tableRole.row(selected_row).data()['key']
-                        }),
-                        headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
-                        success: (function (data) {
-                            if (data.status) {
-                                $('#tableRole').DataTable().ajax.reload();
-                            }
-                        }),
-                        error: (function (XMLHttpRequest, textStatus, errorThrown) {
-                            alert("Error: " + errorThrown);
-                        })
-                    });
-                }
-            });
-
-            /* Initial Table Role */
-            var tableRole = $('#tableRole').DataTable({
-                'processing': true,
-                'serverSide': true,
-                'ajax': function (data, callback) {
-                    $.ajax({
-                        type: 'GET',
-                        url: '/administrator/daftarpegawai/role/userid=' + $('input[name=userid]').val(),
-                        headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
-                        success: (function (data) {
-                            // NOTE: print data
-                            console.log(data)
-
-                            // NOTE: callback response ajax
-                            callback(data);
-                        }),
-                        error: (function (XMLHttpRequest, textStatus, errorThrown) {
-                            alert("Error: " + errorThrown);
-                        })
-                    })
-                },
-                'columns': [
-                    {
-                        "targets": [0],
-                        "visible": false,
-                        "data": 'key',
-                    },{
-                        "targets": [1],
-                        "width": "5%",
-                        "className": "dt-center text-center",
-                        "render": function (data, type, row, meta) {
-                            return meta.row + meta.settings._iDisplayStart + 1;
-                        }
-                    },{
-                        "targets": [2],
-                        "width": "70%",
-                        "data": 'description',
-                        "className": "dt-center text-center",
-                    },{
-                        "targets": [3],
-                        "width": "20%",
-                        "data": 'createdate',
-                        "className": "dt-center text-center",
-                        "render": function (data) {
-                            var date = new Date(data);
-                            var month = date.getMonth() + 1;
-                            return date.getDate() + "/" + (month.toString().length > 1 ? month : "0" + month) + "/" + date.getFullYear() + "  " + date.getHours() + ":" + date.getMinutes() + ":" + date.getSeconds();
-                        }
-                    },{ 
-                        "targets": [4],
-                        "width": "5%",
-                        "className": "dt-center text-center",
-                        "render": function () {
-                            return '<a id="btnDeleteRole" class="btn btn-danger btn-flat"><i class="fa fa-times" aria-hidden="true"></i></a>';
-                        }
-                    }
-                ],
-                'responsive': true,
-                'paging': false,
-                'autoWidth': true,
-                'pagingType': 'simple_numbers',
-                'lengthChange': false,
-                'ordering': false,
-                'searching': false,
-                'info': true
-            });
-        </script>
     </div>
 </div>
