--- a/view/page/error/403.html
+++ b/view/page/error/403.html
@@ -1,4 +1,4 @@
-{% extends "../index.html" %}
+{% extends "../../index.html" %}
 
 {% block css %}
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
@@ -28,13 +28,13 @@
     </h1>
     <ol class="breadcrumb">
         <li><a href="#"><i class="fa fa-exclamation-triangle"></i> Error</a></li>
-        <li class="active">404</li>
+        <li class="active">403</li>
     </ol>
 </section>
 <section class="content">
 
     <div class="error-page">
-        <h2 class="headline text-yellow"> 404</h2>
+        <h2 class="headline text-yellow"> 403</h2>
 
         <div class="error-content">
             <h3><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
