--- a/view/node/detailuser.html
+++ b/view/node/detailuser.html
@@ -15,7 +15,7 @@
         </h4>
     </div>
 
-    <form class="form-horizontal" id="formSave">
+    <form class="form-horizontal" id="formSavePegawai">
         <div class="box-body">
             <input type="hidden" name="usernameid" value="{{ username }}">
             <div class="form-group">
@@ -73,22 +73,27 @@
         <div class="box-footer text-center">
             <button type="button" class="btn btn-default btn-flat" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
             {% if count == 0 %}
-            <button type="button" id="savePegawai" name="savePegawai" class="btn btn-primary btn-flat"><i class="fa fa-save"></i> Simpan</button>
+            <button type="submit" class="btn btn-primary btn-flat"><i class="fa fa-save"></i> Simpan</button>
             {% end %}
         </div>
     </form>
         
     {% if count == 0 %}
         <script>
-            // NOTE: modal-add click button(batalregisterpegawai)
-            $('#savePegawai').on('click', function () {
+            /* Initial Form Save Pegawai */
+            $("#formSavePegawai").submit(function (event) {
+                event.preventDefault();
                 $.ajax({
                     type: 'POST',
-                    url: '/administrator/daftarpegawai/activation/username=' + $('[name="usernameid"]').val(),
+                    url: '/administrator/daftarpegawai/pegawai/add',
+                    data: JSON.stringify({
+                        'username': $('[name="usernameid"]').val()
+                    }),
+                    async: true,  
                     headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
                     success: (function (result) {
                         $('#modal-activation').modal('hide');
-
+                        
                         $.notify({
                             title: '<strong><i class="fa fa-info-circle" aria-hidden="true"></i> Info</strong> <br>',
                             message: result.msg,
@@ -99,16 +104,12 @@
                                 exit: 'animated fadeOutRight'
                             }
                         });
-
-                        if (result.status){
-                            $('#tablePegawai').DataTable().ajax.reload();
-                        }
-
                     }),
                     error: (function (XMLHttpRequest, textStatus, errorThrown) {
                         alert("Error: " + errorThrown);
                     })
                 });
+                $('#modal-activation').modal('hide');
             });
         </script>
     {% end %}
