--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -69,13 +69,12 @@
             <div class="box-body">
 
                 <div class="form-group">
-                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">PegawaiID:</label>
+                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="inputPegawaiid">Pegawai ID:</label>
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="input-group input-group-md">
                             <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
                             <span class="input-group-btn">
-                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i
-                                        class="fa fa-filter" aria-hidden="true"></i> </button>
+                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
                             </span>
                         </div>
                     </div>
@@ -148,17 +147,7 @@
 </div>
 
 <div class="modal fade" data-remote="false" id="modal-role" data-backdrop="false" id="activedModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body" id="userRole">
-
-            </div>
-        </div>
+    <div class="modal-dialog" id="userRole">
     </div>
 </div>
 {% end %}
