--- a/view/node/detailrole.html
+++ b/view/node/detailrole.html
@@ -11,8 +11,7 @@
             <div class="form-group form-group-md">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="pegawaiid">PegawaiID:</label>
                 <div class="col-md-8 col-sm-8 col-xs-12">
-                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}"
-                        readonly>
+                    <input type="text" class="form-control" name="pegawaiid" id="pegawaiid" value="{{ user['pegawaiid'] }}" readonly>
                 </div>
             </div>
             <div class="form-group form-group-md">
