--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -23,6 +23,7 @@
 <script src="{{ static_url('vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
+<script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose.js') }}"></script>
@@ -64,12 +65,12 @@
                         {% module xsrf_form_html() %}
 
                         <div class="form-group">
-                            <label for="inputPegawaiid">Nomor :</label>
-                            <input type="text" class="form-control" id="nomorBerkas" name="nomorBerkas">
+                            <label for="nomor">Nomor :</label>
+                            <input type="text" class="form-control" id="nomor" name="nomor">
                         </div>
                         <div class="form-group">
-                            <label for="inputPegawaiid">Tahun :</label>
-                            <input type="text" class="form-control" id="tahunBerkas" name="tahunBerkas">
+                            <label for="tahun">Tahun :</label>
+                            <input type="text" class="form-control" id="tahun" name="tahun">
                         </div>
                         <div class="pull-right">
                             <button id="btnCariBerkas" type="submit" class="btn btn-warning btn-flat"><i class="fa fa-search" aria-hidden="true"></i> Berkas</button>
@@ -83,9 +84,9 @@
 
             <div class="box box-primary">
                 <div class="box-header with-border">
-                    <h3 class="box-title">New Berkas</h3>
+                    <h3 class="box-title">New Register</h3>
                 </div>
-                <div class="box-body">
+                <div class="box-body"  id="berkasView">
                     <div class="error-content">
                         <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
 
