--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -62,6 +62,9 @@
 
 <section class="content">
     <div class="box box-solid">
+        <div class="box-header with-border text-center">
+            <h3 class="box-title">Pencarian Daftar Pegawai</h3>
+        </div>
 
         <!-- formFilter -->
         <form id="formFilter" class="form-horizontal" method="POST">
@@ -74,12 +77,11 @@
                         <div class="input-group input-group-md">
                             <input type="text" class="form-control" id="inputPegawaiid" name="inputPegawaiid">
                             <span class="input-group-btn">
-                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-warning btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
+                                <button id="btnFilterPegawaiid" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-filter" aria-hidden="true"></i> </button>
                             </span>
                         </div>
                     </div>
                 </div>
-
 
             </div>
             <!-- /.box-body -->
@@ -91,7 +93,7 @@
     <div class="box box-solid">
         <div class="box-body">
             <a class="btn btn-flat btn-success" data-toggle="modal" data-target="#modal-activation"><i class="fa fa-user-plus" aria-hidden="true"></i></a>
-            
+            <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
             <!-- Table Pegawai -->
             <table id="tablePegawai" class="table table-striped table-bordered responsive" style="width:100%">
                 <thead>
@@ -101,8 +103,9 @@
                         <th>Pegawai ID</th>
                         <th>Nama</th>
                         <th>Create Date</th>
-                        <th></th>
-                        <th></th>
+                        <th>Edit</th>
+                        <th>Status</th>
+                        <th>Hapus</th>
                     </tr>
                 </thead>
                 <tbody style="cursor: pointer;">
