--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -52,51 +52,47 @@
 </section>
 
 <section class="content">
-    <div class="row">
-        <div class="col-sm-3">
-
-            <div class="box box-solid">
-                <div class="box-header with-border">
-                    <h3 class="box-title">Pencarian Berkas</h3>
-                </div>
-
-                <div class="box-body">
-                    <form id="formCariBerkas" method="POST" role="form">
-                        {% module xsrf_form_html() %}
-
-                        <div class="form-group">
-                            <label for="nomor">Nomor :</label>
-                            <input type="text" class="form-control" id="nomor" name="nomor">
-                        </div>
-                        <div class="form-group">
-                            <label for="tahun">Tahun :</label>
-                            <input type="text" class="form-control" id="tahun" name="tahun">
-                        </div>
-                        <div class="pull-right">
-                            <button id="btnCariBerkas" type="submit" class="btn btn-warning btn-flat"><i class="fa fa-search" aria-hidden="true"></i> Berkas</button>
-                        </div>
-                    </form>
-                </div>
-            </div>
-
+    <div class="box box-solid">
+        <div class="box-header with-border">
+            <h3 class="box-title">Pencarian Berkas</h3>
         </div>
-        <div class="col-sm-9">
 
-            <div class="box box-primary">
-                <div class="box-header with-border">
-                    <h3 class="box-title">New Register</h3>
-                </div>
-                <div class="box-body"  id="berkasView">
-                    <div class="error-content">
-                        <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+        <div class="box-body">
+            <form id="formCariBerkas" class="form-horizontal"  method="POST" role="form">
+                {% module xsrf_form_html() %}
 
-                        <p class="text-center">
-                            We could not find the page you were looking for.
-                        </p>
+                <div class="form-group">
+                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="nomor">Nomor:</label>
+                    <div class="col-md-5 col-sm-5 col-xs-12">
+                        <input type="text" class="form-control" id="nomor" name="nomor">
                     </div>
                 </div>
-            </div>
+                <div class="form-group">
+                    <label class="control-label col-md-4 col-sm-4 col-xs-12" for="tahun">Tahun:</label>
+                    <div class="col-md-5 col-sm-5 col-xs-12">
+                        <div class="input-group input-group-md">
+                            <input type="text" class="form-control" id="tahun" name="tahun">
+                            <span class="input-group-btn">
+                                <button id="btnCariBerkas" type="submit" class="btn btn-success btn-flat"> <i class="fa fa-database" aria-hidden="true"></i> http://kkp.atrbpn.go.id </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="box box-solid">
+        <div class="box-header with-border">
+            <h3 class="box-title">Informasi Berkas</h3>
+        </div>
+        <div class="box-body"  id="berkasView">
+            <div class="error-content">
+                <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
 
+                <p class="text-center">
+                    We could not find the page you were looking for.
+                </p>
+            </div>
         </div>
     </div>
 </section>
