--- a/view/page/administrator/daftarpegawai.html
+++ b/view/page/administrator/daftarpegawai.html
@@ -63,7 +63,7 @@
 <section class="content">
     <div class="box box-solid">
         <div class="box-header with-border text-center">
-            <h3 class="box-title">Pencarian Daftar Pegawai</h3>
+            <h3 class="box-title">Pencarian Pegawai</h3>
         </div>
 
         <!-- formFilter -->
