--- a/view/node/detailuser.html
+++ b/view/node/detailuser.html
@@ -7,9 +7,9 @@
         <h4 class="text-center">
             Informasi Pegawai (
             {% if count > 0 %}
-                <small class="text-green">USER SUDAH AKTIF</small>
+                <small class="text-green">USER SUDAH TERDAFTAR</small>
             {% else %}
-                <small class="text-red">USER BELUM AKTIF</small>
+                <small class="text-red">USER BELUM TERDAFTAR</small>
             {% end %}
             )
         </h4>
