--- a/view/node/detailuser.html
+++ b/view/node/detailuser.html
@@ -81,15 +81,14 @@
     {% if count == 0 %}
         <script>
             /* Initial Form Save Pegawai */
-            $("#formSavePegawai").submit(function (event) {
-                event.preventDefault();
+            $("#formSavePegawai").submit(function () {
                 $.ajax({
                     type: 'POST',
                     url: '/administrator/daftarpegawai/pegawai/add',
                     data: JSON.stringify({
                         'username': $('[name="usernameid"]').val()
                     }),
-                    async: false,  
+                    async: true,  
                     headers: { 'X-XSRFToken': $('input[name="_xsrf"]').val() },
                     success: (function (result) {
                         $('#modal-activation').modal('hide');
